--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -11,7 +11,12 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <section>
+      <%= form_for @category do |f| %>
+      <%= f.label :"Category Name"%><br>
+       <%= f.text_field :name, class: "form-control" %><br>
+       <% end %>
+       <%= f.submit %>
+    </section>
+
 <% end %>
