--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,9 @@
 <p id="notice"><%= notice %></p>
+<h3><%= @category.name %></h3>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
+@<%# TODO: change resources to associate catogory to product %>
+<%= render prattial: 'application/products_index' %>
+
+  <%= @category.name %>
+
 <%= link_to 'Back', categories_path %>
