--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,29 @@
-<p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
+<ul>
+  <li><%= image_tag("image_url", class: 'list_image') %></li>
+  <li><h3><%= @product.name  %></h3></li>
+</ul>
+
+<ul class="product-price-des">
+  <li> Price: $<%= @product.price %></li>
+  <li>In Stock: <%= @product.quantity %></li>
+  <liclass= "link"><%= link_to "Add to cart" %></li>
+</ul>
+
+<ul>
+  <%= form_for [@product, @review] do |f| %>
+  <li class="field">
+    <%= f.label :rating %>
+    <%= f.text_field :rating %>
+  </li>
+  <li class="field">
+    <%= f.label :description %>
+    <%= f.text_field :description %>
+  </li>
+  <li class="actions">
+    <%= f.submit "Submit Review" %>
+  </li>
+  <% end %>
+</ul>
+
 <%= link_to 'Back', products_path %>
