updated views and controller for product, catogories, merchants

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,4 +2,4 @@
 
 <h1>Categories</h1>
 
-<%= render partial: '/application/index', locals: {collection: @categories, item: "category"}%>
+<%= render partial: '/application/index', locals: {collection: @categories, field:'name'}%>
