--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,4 +1,3 @@
 
 <h1>Merchants</h1>
-<!-- @<%# TODO: name to user_name %> -->
-<%= render partial: '/application/index', locals: { collection: @merchants, name: "user_name", item: "merchant"} %>
+<%= render partial: '/application/index', locals: { collection: @merchants, field:'user_name'} %>
