--- a/app/views/order_items/index.html.erb
+++ b/app/views/order_items/index.html.erb
@@ -13,5 +13,6 @@
         <% end %>
       </li>
       <li> Price: <%= item.product.price %></li>
+      <li class= "link"><%= link_to 'Remove from Cart', order_item_path(item), method: :delete %></li>
 <% end %>
 </ul>
