Changed the routes to handle log-in and log-out session. Added index_log_in and index_log_out in sessions controllers. Added index_log_in and index_log_out view templates.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   </head>
 
   <body>
+    <header>
+      <h1>ROBITS</h1>
+      <nav>
+        <% if session[:merchant_id] %>
+          <%= button_to "Log out", sessions_path, method: :delete %>
+        <% else %>
+          <%= button_to "Log In", "/auth/github", method: :get %>
+        <% end %>
+      </nav>
+    </header>
     <%= yield %>
   </body>
 </html>
