Added new route, new Session controller action, created merchant_login view for Merchant Control Menu only available to authenticated user. Minor change on styles.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,14 @@
       <h3>ROBITS</h3>
       <nav>
         <% if session[:merchant_id] %>
-        <%= button_to "Log out", sessions_path, method: :delete %>
+          Login Successful! Welcome! <%= @current_merchant.user_name %>
+          <%= button_to "Log out", sessions_path, method: :delete %>
+          <%= button_to "Merchant Control", sessions_merchant_login_path, method: :get %>
         <% else %>
-        <%= button_to "Log In", "/auth/github", method: :get %>
+          <% if flash[:error] %>
+            <%= flash[:error] %>
+          <% end %>
+          <%= button_to "Log In", "/auth/github", method: :get %>
         <% end %>
       </nav>
     </header>
