removed a belongs to catagory from products.

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,4 +2,10 @@
 
 <h1>Categories</h1>
 
-<%= render partial: '/application/index', locals: {collection: @categories, field:'name'}%>
+<ul>
+  <% @categories.each do |item| %>
+  <li><%= link_to (item.name),  category_products_path(item) %></li>
+  <% end %>
+</ul>
+
+<%#render partial: '/application/index', locals: {collection: @categories, field:'name'}%>
