--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -19,6 +19,12 @@
   <%= f.label :description %><br />
   <%= f.text_area :description%>
 </li>
+
+<li class="field">
+<!-- <label for=""></label> -->
+  <%# :categories %>
+</li>
+
 <li class="field">
   <%= f.label :image_url %><br />
   <%= f.text_field :image_url %>
