fixed catogireis products relationship

--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h3>Browse <%="#{@merchant.user_name}" %>'s Products</h3>
+<h3>Browse <%= @merchant.user_name %>'s Products</h3>
 
 <%= render partial: '/application/products_index' %>
 
