--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,7 +4,7 @@
 
 <ul>
   <% @categories.each do |item| %>
-  <li><%= link_to (item.name),  category_products_path(item) %></li>
+  <li><%= link_to (item.name),  category_path(item) %></li>
   <% end %>
 </ul>
 
