--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@merchant_product) do |f| %>
+<%= form_for(@merchant_product, url: merchant_products_path(@merchant)) do |f| %>
 <%# if product.errors.any? %>
 <!-- <div id="error_explanation"> -->
   <!-- <h2><%# pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
