--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<h1>Products by <%= @merchant.user_name %></h1>
 
 <%= render partial: 'products_index' %>
- 
