Removed new and create from merchants' routes. Removed new and create from Merchants Controller. Reason: a Merchant can't create another Merchant object in our database. Added a link to show a Merchant's own profile in merchant log in page, added a corresponding template for this profile.

--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<h3>Welcome, <%= @merchant.user_name %>!</h3>
+
 <h3>Browse <%= @merchant.user_name %>'s Products</h3>
 
 <%= render partial: '/application/products_index' %>
