Added Dragonfly gem in order to add photo's and added image table, added cache gem

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,8 @@
 <ul>
-  <li><%= image_tag("image_url", class: 'list_image') %></li>
+<p>
+  <strong>Image:</strong>
+   <li class="image"><%= @product.image_stored? ? image_tag(@product.image.thumb('80x60').url) : "" %></li>
+</p>
   <li><h3><%= @product.name  %></h3></li>
 </ul>
 
