--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -22,6 +22,11 @@
   <%= f.text_field :price %>
 </li>
 
+<li class="field">
+  <%= f.label :quantity %><br>
+  <%= f.text_field :quantity %>
+</li>
+
 <li class="actions">
   <%= f.submit %>
 </li>
