--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,41 @@
 <h1>Editing Product</h1>
 
-<%= render 'form', product: @product %>
+<!-- <%# render 'form', product: @merchant_product, url: {action: "update"} %> -->
 
-<%= link_to 'Show', @product %> |
+<%= form_for @merchant_product, url: {action: "update"} do |f| %>
+
+<ul>
+
+<li class="field">
+  <%= f.label :name %><br />
+  <%= f.text_field :name %>
+</li>
+
+<li class="field">
+<!-- <label for=""></label> -->
+  <%# :categories %>
+</li>
+
+<li class="field">
+  <%= f.label :image %><br>
+  <%= f.file_field :image %>
+</li>
+
+<li class="field">
+  <%= f.label :price %><br />
+  <%= f.text_field :price %>
+</li>
+
+<li class="field">
+  <%= f.label :quantity %><br>
+  <%= f.text_field :quantity %>
+</li>
+
+<li class="actions">
+  <%= f.submit %>
+</li>
+<% end %>
+</ul>
+
+<%= link_to 'Show', @merchant_product %> |
 <%= link_to 'Back', products_path %>
