--- a/app/views/payment_details/show.html.erb
+++ b/app/views/payment_details/show.html.erb
@@ -1,25 +1,7 @@
 <h1>This is the confirmation page</h1>
 <main>
 
-  <section>
-    <ul>
-      <% @order_items.each  do |item| %>
-      <% product = item.product %>
-      <li>
-        <%= link_to product.name, product_path(product) %>
-      </li>
-      <li>
-        Price: <%= price = product.price %>
-      </li>
-      <li>
-      Quantity: <%= quantity = item.quantity %>
-      </li>
-      <li>
-        Subtotal: <%= subtotal = price * quantity %>
-      </li>
-      <% end %>
-    </ul>
-  </section>
+  <%= render partial: "order_details", locals: {order_items: @order_items} %>
 
   <section>
     <ul>
