--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -6,10 +6,8 @@
   <%= f.label :name %><br />
   <%= f.text_field :name %>
 </li>
-
 <li class="field">
-<!-- <label for=""></label> -->
-  <%# :categories %>
+  <%= f.select :category_ids, Category.all.collect{|category| [category.name, category.id]}, {}, {multiple: true}%>
 </li>
 
 <li class="field">
