--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -2,6 +2,10 @@
 
 <h3>Browse <%= @merchant.user_name %>'s Products</h3>
 
+<% @products.each do |product| %>
+  <%= product %>
+<% end %>
+
 <%= render partial: '/application/products_index' %>
 
 <%= link_to 'Back', merchants_path %>
