Added description field into product.

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -6,8 +6,20 @@
   <%= f.label :name %><br />
   <%= f.text_field :name %>
 </li>
+
 <li class="field">
-  <%= f.select :category_ids, Category.all.collect{|category| [category.name, category.id]}, {}, {multiple: true}%>
+  <%= f.label :price %><br />
+  <%= f.text_field :price %>
+</li>
+
+<li class="field">
+  <%= f.label :description %><br>
+  <%= f.text_field :description %>
+</li>
+
+<li class="field">
+  <%= f.label :quantity %><br>
+  <%= f.text_field :quantity %>
 </li>
 
 <li class="field">
@@ -16,13 +28,8 @@
 </li>
 
 <li class="field">
-  <%= f.label :price %><br />
-  <%= f.text_field :price %>
-</li>
-
-<li class="field">
-  <%= f.label :quantity %><br>
-  <%= f.text_field :quantity %>
+  <%= f.label :Category %><br>
+  <%= f.select :category_ids, Category.all.collect{|category| [category.name, category.id]}, {}, {multiple: true}%>
 </li>
 
 <li class="actions">
