Filters the index page for order status

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,14 @@
 <h1>Order Fulfilment Page</h1>
 
+<%= link_to "ALL ORDERS", orders_path %>
+<%= form_for @merchant, method: :get, url: orders_path do |f| %>
+  <%= f.submit "COMPLETED" %>
+  <%= f.submit "PAID" %>
+  <%= f.submit "PENDING" %>
+  <%= f.submit "CANCELLED" %>
+
+<% end %>
+
 <main>
 
   <section>
@@ -27,5 +36,5 @@
         </uL>
       </ul>
   </section>
-  <%= render partial: "order_list", locals: {order_items: @order_items} %>
+  <%= render partial: "order_list", locals: {order_items: @filtered_orders} %>
 </main>
