--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,20 +13,34 @@
 <body>
   <div class="container">
     <header>
+    <div class="top-bar">
+
       <h3>ROBITS</h3>
-      <nav>
+      <nav class="top-bar-left">
+        <ul class="menu">
+          <li> <%= link_to "Merchants", merchants_path  %> </li>
+          <li> <%= link_to "Catergories", categories_path %> </li>
+          <li> <%= link_to "Products", products_path %> </li>
+        </ul>
+
+
+      </nav>
+      <nav class="top-bar-right">
+        <ul class="menu">
+
         <% if session[:merchant_id] %>
-          Login Successful! Welcome! <%# @current_merchant.user_name %>
-          <%= button_to "Log out", sessions_path, method: :delete %>
-          <%= button_to "Merchant Control", sessions_merchant_login_path, method: :get %>
+          <li><%= link_to "Log out", sessions_path, method: :delete %></li>
+          <li><%= link_to "Merchant Control", sessions_merchant_login_path, method: :get %></li>
         <% else %>
           <% if flash[:error] %>
             <%= flash[:error] %>
           <% end %>
-          <%= button_to "Log In", "/auth/github", method: :get %>
-          <%= button_to "Sign Up", "https://github.com/join?source=header-home", method: :get %>
+        <li>  <%= link_to "Log In", "/auth/github", method: :get %></li>
+          <li><%= link_to "Sign Up", "https://github.com/join?source=header-home", method: :get %></li>
         <% end %>
+        </ul>
       </nav>
+    </div>
     </header>
     <%= yield %>
   </div>
