changed product routes to be shallow

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@merchant_product, url: merchant_products_path(@current_merchant)) do |f| %>
+<%= form_for(@product, url: products_path(@current_merchant)) do |f| %>
 
 <ul>
 
