--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,7 +2,7 @@
 
 <!-- <%# render 'form', product: @merchant_product, url: {action: "update"} %> -->
 
-<%= form_for @merchant_product, url: {action: "update"} do |f| %>
+<%= form_for @product, url: {action: "update"} do |f| %>
 
 <ul>
 
