added welcome user_name function. Added functionality to view merchants and produts from the front page.

--- a/app/views/application/_products_index.html.erb
+++ b/app/views/application/_products_index.html.erb
@@ -1,8 +1,13 @@
 <ul>
-<% @products.each do |product| %>
-   <li class="image"><%=link_to product.image_stored? ? image_tag(product.image.thumb('80x60').url) : "", product_path(product) %></li>
-   <li><%= link_to product.name, product_path(product.id) %></li>
-   <li> Price: <%= product.price %></li>
-   <li>In Stock: <%= product.quantity %></li>
-<% end %>
+  <% @products.each do |product| %>
+  <% if product.image != nil %>
+  <strong>Image:</strong>
+  <li class="image"><%= product.image_stored? ? image_tag(product.image.thumb('80x60').url) : "" %></li>
+  <% elsif %>
+  <li class="image"><%= image_tag "no_image.png", size: "80x60", alt: "Robots"  %></li>
+  <% end %>
+  <li><%= link_to product.name, product_path(product.id) %></li>
+  <li> Price: <%= product.price %></li>
+  <li>In Stock: <%= product.quantity %></li>
+  <% end %>
 </ul>
