--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
       <nav>
         <% if session[:merchant_id] %>
-        Login Successful! Welcome!
+        Login Successful! Welcome <%= "#{current_merchant.user_name}" %>!
         <%= button_to "Log out", sessions_path, method: :delete %>
         <%= button_to "Merchant Control", sessions_merchant_login_path, method: :get %>
         <% else %>
@@ -32,12 +32,22 @@
         <!-- Start of new code -->
         <section class="small-12 columns">
           <ul class="vertical menu medium-horizontal" data-responsive-menu="accordion medium-dropdown">
-            <ul class="dropdown menu" data-dropdown-menu>
+            <ul class="menu vertical">
               <li>
-                <a href="#">Shop by Merchants</a>
-                <ul class="menu">
-                  <% link_to "cathegories_path()" %>
-                </ul>
+                <% category.each do |f| %>
+                <%= link_to "#{f.name}", category_path(f.id) %>
+                <% end %>
+              </li>
+            </ul>
+          </ul>
+        </section>
+        <section class="small-12 columns">
+          <ul class="vertical menu medium-horizontal" data-responsive-menu="accordion medium-dropdown">
+            <ul class="menu vertical">
+              <li>
+                <% merchant.each do |f| %>
+                <%= link_to "#{f.user_name}", category_path(f.id) %>
+                <% end %>
               </li>
             </ul>
           </ul>
