--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,13 @@
 <ul>
-<p>
-  <% if @product.image != nil %>
-  <strong>Image:</strong>
-   <li class="image"><%= @product.image_stored? ? image_tag(@product.image.thumb('300x260').url) : "" %></li>
-   <% elsif %>
-   <li class="image"><%= image_tag "no_image.png", size: "300x260", alt: "Robots" %></li>
-   <% end %>
-</p>
-  <li><h3><%= @product.name  %></h3></li>
+  <p>
+    <% if @product.image != nil %>
+    <strong>Image:</strong>
+    <li class="image"><%= @product.image_stored? ? image_tag(@product.image.thumb('300x260').url) : "" %></li>
+    <% else %>
+    <li class="image"><%= image_tag "no_image.png", size: "300x260", alt: "Robots" %></li>
+    <% end %>
+  </p>
+  <li><h3><%= @product.name %></h3></li>
 </ul>
 
 <ul class="product-price-des">
@@ -21,34 +21,34 @@
 </ul>
 
 <% if @product.merchant_id == nil || @product.merchant_id != session[:merchant_id] %>
-  <ul>
-    <%= form_for [@product, @review] do |f| %>
-    <li class="field">
-      <%= f.label :rating %>
-      <%= f.number_field :rating,  in: 1..5 %>
-    </li>
-    <li class="field">
-      <%= f.label :description %>
-      <%= f.text_field :description %>
-    </li>
-    <li class="actions">
-      <%= f.submit "Submit Review" %>
-    </li>
-    <% end %>
-  </ul>
+<ul>
+  <%= form_for [@product, @review] do |f| %>
+  <li class="field">
+    <%= f.label :rating %>
+    <%= f.number_field :rating,  in: 1..5 %>
+  </li>
+  <li class="field">
+    <%= f.label :description %>
+    <%= f.text_field :description %>
+  </li>
+  <li class="actions">
+    <%= f.submit "Submit Review" %>
+  </li>
+  <% end %>
+</ul>
 <% else %>
-  <h6>You can't review your own product.</h6>
+<h6>You can't review your own product.</h6>
 <% end %>
 
 <article class="review">
-  <h3>Reviews</h3>
+  <h4>Customer Reviews</h4>
   <ul>
     <%  @reviews.each do |f| %>
-      <% f.rating.times do |f| %>
-      <%= image_tag "robot.png", size: "18x18", alt: "Robots" %>
-      <% end %>
-      <% if f.description != nil %>
-      <li><%= f.description %></li>
+    <% f.rating.times do |f| %>
+    <%= image_tag "robot.png", size: "18x18", alt: "Robots" %>
+    <% end %>
+    <% if f.description != nil %>
+    <li><%= f.description %></li>
     <% end %>
     <% end %>
   </ul>
