Fixes html for semantics

--- a/app/views/order_items/show.html.erb
+++ b/app/views/order_items/show.html.erb
@@ -7,8 +7,9 @@
       <li>Email: <%= @payment_detail.email %> </li>
       <li>Address: <%= @payment_detail.street %>
                     <br /> <%= @payment_detail.city %>, <%= @payment_detail.state %> <%= @payment_detail.zip %>
-</li>
-      <li>Credit Card: <%= @payment_detail.cc_four_digits %> </li><li>Expiration Date: <%= @payment_detail.cc_expiration_date %> </li>
+      </li>
+      <li>Credit Card: <%= @payment_detail.cc_four_digits %></li>
+      <li>Expiration Date: <%= @payment_detail.cc_expiration_date %> </li>
 
     </ul>
 <% end %>
