--- a/app/views/payment_details/show.html.erb
+++ b/app/views/payment_details/show.html.erb
@@ -1,7 +1,8 @@
 <h1>This is the confirmation page</h1>
 <main>
-
-  <%= render partial: "order_details", locals: {order_items: @order_items} %>
+  <section>
+    <%= render partial: "order_details", locals: {order_items: @order_items} %>
+  </section>
 
   <section>
     <ul>
