--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -11,13 +11,14 @@
 <main>
   <section>
       <ul>
-        <li>TOTAL REVENUE: <%= OrderItem.sum_total_prices(@order_items)  %> </li>
-        <ul>
-          <li>COMPLETED: <%= OrderItem.sum_total_prices(@completed_orders)  %> </li>
-          <li>PAID: <%= OrderItem.sum_total_prices(@paid_orders)  %></li>
-          <li>PENDING: <%= OrderItem.sum_total_prices(@pending_orders)  %></li>
-          <li>CANCELLED: <%= OrderItem.sum_total_prices(@cancelled_orders)  %></li>
-        </ul>
+        <li>TOTAL REVENUE: <%= OrderItem.sum_total_prices(@order_items)  %>
+          <ul>
+            <li>COMPLETED: <%= OrderItem.sum_total_prices(@completed_orders)  %>  </li>
+            <li>PAID: <%= OrderItem.sum_total_prices(@paid_orders)  %></li>
+            <li>PENDING: <%= OrderItem.sum_total_prices(@pending_orders)  %></li>
+            <li>CANCELLED: <%= OrderItem.sum_total_prices(@cancelled_orders)    %></li>
+          </ul>
+        </li>
       </ul>
   </section>
 
