--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,20 +1,22 @@
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any styles
+ * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
+ * file per style scope.
+ *
+ *= require_tree .
+ *= require_self
+ *= require foundation_and_overrides
+
+ */
+
 body {
-  background-image: url("cute_robots.jpg");
-  background-size: auto;
-}
+  background-image: url(cute_robots.jpg);
 
-.container {
-  background-color: #F1F2F2;
-  opacity: 0.95;
-  overflow: hidden;
-  margin: 0px;
-}
-
-nav {
-  border-bottom: 1px solid black;
-  padding-bottom: 20px;
-}
-
-table {
-  text-align: left;
 }
