Fixed the edit prodiuct function

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -42,5 +42,5 @@
   <% end %>
   </ul>
 
-<%= link_to 'Show', @merchant_product %> |
+<%= link_to 'Show', @product %> |
 <%= link_to 'Back', products_path %>
