Added error message to new product form, and changed response status to bad request in ProductsController#create

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,13 @@
+<ul>
+  <% @product.errors.each do |column, message| %>
+  <li>
+    <%= column %>
+    <%= message %>
+  </li>
+  <% end %>
+</ul>
+
+
 <%= form_for(@product, url: products_path(@current_merchant)) do |f| %>
 
 <ul>
