--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+  <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
 
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
-    <%= csrf_meta_tags %>
-  </head>
+  <%= stylesheet_link_tag    "application" %>
+  <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
 
-  <body>
-    <header>
-      <h3><%= link_to "ROBITS", root_path %></h3>
+  <!-- ROBITS cute font -->
+  <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+  <%= csrf_meta_tags %>
+</head>
+
+<body>
+  <header>
 
     <!-- Navigation row for top Menu -->
-    <nav class="row">
+    <nav class="row top-bar">
+      <section class="small-12 column">
+        <ul class="title-area row">
+          <li class="name centered column">
+            <h1><%= image_tag("robits_logo") %> <%= link_to "ROBITS", root_path, class: "logo-name" %></h1>
+          </li>
+        </ul>
+      </section>
 
-    <!-- log in stuff -->
-    <section>
-
-      <% if session[:merchant_id] %>
-      Login Successful! Welcome <%= "#{current_merchant.user_name}" %>!
-      <%= button_to "Log out", sessions_path, method: :delete %>
-      <%= button_to "Merchant Control", sessions_merchant_login_path, method: :get %>
-      <% else %>
-      <% if flash[:error] %>
-      <%= flash[:error] %>
-      <% end %>
-      <%= button_to "Log In", "/auth/github", method: :get %>
-      <%= button_to "Sign Up", "https://github.com/join?source=header-home", method: :get %>
-      <% end %>
-    </section>
-
-
-        <section class="small-12 columns">
-          <!-- Make this unordered list horizontal at medium and larger screens & verticle on small ones  -->
+    <div class="lower-link-area">
+      <section class="small-12 columns top-bar-left">
+        <!-- Make this unordered list horizontal at medium and larger screens & verticle on small ones  -->
         <ul class="vertical menu medium-horizontal" data-responsive-menu="accordion medium-dropdown">
+          <li>
+            <%= link_to 'SHOP ALL', products_path %>
+          </li>
 
           <li>
-            CATEGORIES
+            <%= link_to 'CATEGORIES', categories_path %>
             <!-- Submenu of Categories -->
             <ul class="menu vertical">
               <% category.each do |f| %>
@@ -50,8 +46,9 @@
               <% end %>
             </ul>
           </li>
+
           <li>
-            MERCHANTS
+            <%= link_to 'MERCHANTS', merchants_path %>
             <!-- Submenu of Merchants -->
             <ul class="menu vertical">
               <% merchant.each do |f| %>
@@ -62,18 +59,20 @@
 
             </ul>
           </li>
-      <li><%= link_to "Google", "https://www.google.com" %>
-        <ul class="menu">
-          <li><%= link_to "Google Drive", "https://drive.google.com" %></li>
-        </ul>
-      </li>
-      <li><%= link_to "Facebook", "https://www.facebook.com" %></li>
-      <li><%= link_to "Log in via Github", "auth/github" %></li>
-    </ul>
-    </section>
-    </nav>
+        </section>
 
-    <%= yield %>
+        <section>
 
-  </body>
-</html>
+          <ul class="menu top-bar-right">
+            <li><%= login_status %></li>
+            <li><%= login_button %></li>
+          </ul>
+        </section>
+    </div>
+
+      </nav>
+
+      <%= yield %>
+
+    </body>
+    </html>
