Fixed the product new/edit partial. Added some negative case controller tests to Products.

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,4 @@
+<% if @product.errors.any? %>
 <ul>
   <% @product.errors.each do |column, message| %>
   <li>
@@ -6,9 +7,9 @@
   </li>
   <% end %>
 </ul>
+<% end %>
 
-
-<%= form_for(@product, url: products_path(@current_merchant)) do |f| %>
+<%= form_for @product, method: action_name do |f| %>
 
 <ul>
 
