--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,10 +15,14 @@
  *= require foundation_and_overrides
 
  */
+body {
+  background-color: rgba(245,242,225, 0.5);
+}
 
 h1, .title-area, .name {
   margin: 0 0;
-  background-color: rgb(245,242,225)
+  width: 100rem;
+  background-color: rgb(245,242,225);
 }
 
 .name {
@@ -33,9 +37,19 @@ a:hover {
   color: #cacaca;
 }
 
+.row.top-bar {
+  max-width: 100rem;
+  margin-left: none;
+  margin-right: none;
+}
+
+.top-bar {
+  box-shadow:0px 1px 1px rgb(136,149,194);
+}
+
 .top-bar, .top-bar ul {
-    background-color: rgb(136,149,194);
-    padding: 0;
+  background-color: rgb(136,149,194);
+  padding: 0;
 }
 
 .dropdown.menu.medium-horizontal > li.is-dropdown-submenu-parent > a::after {
