--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,9 @@
 
         <section>
 
+          <% if session[:merchant_id] %>
+             <%= button_to "Merchant Control", sessions_merchant_login_path, method: :get %>
+           <% end %>
           <ul class="menu top-bar-right">
             <li><%= login_status %></li>
             <li><%= login_button %></li>
