--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
 
   <!-- ROBITS cute font -->
-  <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chelsea+Market|Rubik" rel="stylesheet">
   <%= csrf_meta_tags %>
 </head>
 
