--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
  */
 body {
   background-color: rgba(245,242,225, 0.5);
+  font-family: 'Rubik', sans-serif;
 }
 
 h1, .title-area, .name {
@@ -64,4 +65,30 @@ a:hover {
   text-shadow: 2px 2px 3px rgb(82, 82, 142);
   font-family: 'Chelsea Market', cursive;
 
+}
+
+li.column {
+  list-style: none;
+}
+
+.small-up-4 > li {
+  margin-bottom: 2.25rem;
+  margin-top: 2rem;
+}
+
+
+h2 {
+  color: rgb(136, 149, 194);
+  text-shadow: 2px 2px 3px rgb(82, 82, 142);
+  font-family: 'Chelsea Market', cursive;
+}
+
+.product-info {
+  color: rgb(82, 82, 142);
+  font-family: 'Rubik', sans-serif;
+}
+
+.notice {
+  font-weight: bold;
+  font-size: 1rem;
 }
