--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.small-up-1 {
+  margin-top: 1rem;
+}
+
+.notice > a {
+  color: rgb(82, 82, 142);
+  font-size: 2rem;
+}
