--- a/app/views/application/_products_index.html.erb
+++ b/app/views/application/_products_index.html.erb
@@ -1,7 +1,7 @@
   <ul class='row small-up-4'>
     <% @products.each do |product| %>
     <li class="column text-center">
-      <%= product_image(product) %>
+      <%= product_image(product, "80x60") %>
       <ul 'row small-up-3' >
         <li class="column text-center"><h2><%= link_to product.name, product_path(product.id) %></h2></li>
         <li class="product-info column text-center"> $ <%= product.price %>0</li>
