Added semantic tags section, class 'body-text'

--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,3 +1,8 @@
 
 <h1>Merchants</h1>
+
+<section class="body-text">
+
 <%= render partial: '/application/index', locals: { collection: @merchants, field:'user_name'} %>
+
+</section>
