--- a/app/views/merchants/edit.html.erb
+++ b/app/views/merchants/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Editing Merchant</h1>
 
+<section class="body-text">
+
 <%= render 'form', merchant: @merchant %>
 
 <%= link_to 'Show', @merchant %> |
 <%= link_to 'Back', merchants_path %>
+
+</<section>
