--- a/app/views/merchants/new.html.erb
+++ b/app/views/merchants/new.html.erb
@@ -1,5 +1,9 @@
 <h1>New Merchant</h1>
 
+<section class="body-text">
+
 <%= render 'form', merchant: @merchant %>
 
 <%= link_to 'Back', merchants_path %>
+
+</section>
